--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,85 @@
-[env:proton]
-platform = https://github.com/norandomtechie/platform-raspberrypi#feature/proton-picosdk-support
-board = proton
-framework = picosdk
-build_src_flags = -O0
-debug_tool = picoprobe
+; [env:proton]
+; platform = https://github.com/norandomtechie/platform-raspberrypi#feature/proton-picosdk-support
+; board = proton
+; framework = picosdk
+; build_src_flags = -O0
+; debug_tool = picoprobe
+; upload_protocol = picoprobe
+; monitor_speed = 115200
+
+; ---------- Common settings for all envs ----------
+[env:base]
+platform      = https://github.com/norandomtechie/platform-raspberrypi#featureproton-picosdk-support
+board         = proton
+framework     = picosdk
 upload_protocol = picoprobe
-monitor_speed = 115200
+debug_tool      = picoprobe
+monitor_speed   = 115200
+
+; USB CDC printf on, UART printf off
+build_flags =
+  -DPICO_STDIO_USB=1
+  -DPICO_STDIO_UART=0
+  -I I2C
+  -I SPI
+  -I PWM
+  -I ADC
+
+; Compile from these folders, then each env below will further restrict which "main"
+; NOTE: envs below override build_src_filter entirely, so this is just a base.
+build_src_filter =
+  +<I2C/*.c>
+  +<SPI/*.c>
+  +<PWM/*.c>
+  +<ADC/*.c>
+  +<src/**>
+
+; ---------- I2C test: builds I2C_test.c as the only main ----------
+[env:i2c_test]
+extends = env:base
+build_src_filter =
+  +<I2C/I2C_test.c>     ; contains main()
+  +<I2C/I2C_Code.c>     ; driver
+  -<src/**>             ; exclude general main.c
+  -<SPI/**> -<PWM/**> -<ADC/**>
+
+; ---------- SPI test ----------
+[env:spi_test]
+extends = env:base
+build_src_filter =
+  +<SPI/SPI_test.c>
+  +<SPI/SPI_Code.c> 
+  -<src/**>
+  -<I2C/**> -<PWM/**> -<ADC/**>
+
+; ---------- PWM test ----------
+[env:pwm_test]
+extends = env:base
+build_src_filter =
+  +<PWM/PWM_test.c>
+  +<PWM/PWM_Code.c>
+  -<src/**>
+  -<I2C/**> -<SPI/**> -<ADC/**>
+
+; ---------- ADC test ----------
+[env:adc_test]
+extends = env:base
+build_src_filter =
+  +<ADC/ADC_test.c>
+  +<ADC/ADC_Code.c>
+  -<src/**>
+  -<I2C/**> -<SPI/**> -<PWM/**>
+
+; ---------- Combined full app ----------
+[env:combined]
+extends = env:base
+build_src_filter =
+  +<src/main.c>         ; the general app main()
+  +<I2C/I2C_Code.c>
+  +<SPI/SPI_Code.c>
+  +<PWM/PWM_Code.c>
+  +<ADC/ADC_Code.c>
+  -<I2C/*_test.c> -<SPI/*_test.c> -<PWM/*_test.c> -<ADC/*_test.c>
+
+; Choose which one builds by default (optional)
+; default_envs = i2c_test
